[package]
name = "appflowy-cloud-billing-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-entity = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "ef96b42" }
client-api = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "ef96b42" }
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = "1.37"

[dev-dependencies]
# AppFlowy dependencies
client-api-test-util = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "ef96b42" }

[patch.crates-io]
collab = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-entity = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-folder = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-document = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
