[package]
name = "appflowy-cloud-billing-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-entity = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "6cc46e3779f7174284a0b52cbc87fb1cf98b0b9f" }
client-api = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "6cc46e3779f7174284a0b52cbc87fb1cf98b0b9f" }
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = "1.37"
yrs = "0.18.8"

[dev-dependencies]
# AppFlowy dependencies
client-api-test = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "6cc46e3779f7174284a0b52cbc87fb1cf98b0b9f" }

[patch.crates-io]
# It's diffcult to resovle different version with the same crate used in AppFlowy Frontend and the Client-API crate.
# So using patch to workaround this issue.
collab = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "2c430e0" }
collab-entity = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "2c430e0" }
collab-folder = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "2c430e0" }
collab-document = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "2c430e0" }
