[package]
name = "appflowy-cloud-billing-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# AppFlowy dependencies
client-api = { version = "0.2" }
shared-entity = { version = "0.1" }

reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = "1.38"
yrs = "0.18.8"

[dev-dependencies]
# AppFlowy dependencies
client-api-test = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "45bfcc0a31e84996157c69a60c8458eeb98b5f96" }

[patch.crates-io]
shared-entity = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "45bfcc0a31e84996157c69a60c8458eeb98b5f96" }
client-api = { git = "https://github.com/AppFlowy-IO/AppFlowy-Cloud", rev = "45bfcc0a31e84996157c69a60c8458eeb98b5f96" }
# It's diffcult to resovle different version with the same crate used in AppFlowy Frontend and the Client-API crate.
# So using patch to workaround this issue.
collab = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "cca5135f0010fa5de22a298cbed939e21575538c" }
collab-entity = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "cca5135f0010fa5de22a298cbed939e21575538c" }
collab-folder = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "cca5135f0010fa5de22a298cbed939e21575538c" }
collab-document = {  git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "cca5135f0010fa5de22a298cbed939e21575538c" }
